<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="隐藏">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="hide_system_app"
            app:title="@string/hide_system_app" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="hide_app_list"
            app:title="@string/hide_app_list"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/about"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="version"
            app:title="@string/version"
            app:summary="1.1.1"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="author"
            app:title="@string/author"
            app:summary="\@h3110w0r1d-y"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="github"
            app:title="@string/github"
            app:summary="https://github.com/h3110w0r1d-y/T9Launcher"/>
    </PreferenceCategory>

</PreferenceScreen>